[gd_scene load_steps=6 format=3 uid="uid://dsyqnoeoh12gw"]

[ext_resource type="Script" path="res://Examples/ThirdPersonPlayer/ThirdPersonPlayer.gd" id="1_wyx1d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l3mrw"]
radius = 0.3
height = 1.7

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ui8jj"]
radius = 0.3
height = 1.7

[sub_resource type="SphereMesh" id="SphereMesh_l018l"]
radius = 0.25
height = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_kgnbs"]
radius = 0.1

[node name="TPPlayer" type="CharacterBody3D"]
script = ExtResource("1_wyx1d")
cameraSpringLength = 1.5

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_l3mrw")

[node name="Model" type="Node3D" parent="."]

[node name="Mesh1" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
mesh = SubResource("CapsuleMesh_ui8jj")

[node name="Mesh2" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, -0.2)
mesh = SubResource("SphereMesh_l018l")

[node name="CameraPivotY" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25516, 0)

[node name="CameraPivotX" type="Node3D" parent="CameraPivotY"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="SpringArm" type="SpringArm3D" parent="CameraPivotY/CameraPivotX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.236565, -0.0724179, 0)
shape = SubResource("SphereShape3D_kgnbs")

[node name="Camera" type="Camera3D" parent="CameraPivotY/CameraPivotX/SpringArm"]
current = true
fov = 80.0
